Bug 99882 - DEBUG build fails with clang due to -Wformat errors
Summary: DEBUG build fails with clang due to -Wformat errors
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) NetBSD
: medium minor
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2017-02-21 06:18 UTC by Rin Okuyama
Modified: 2018-03-25 01:42 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
patch: avoid -Wformat errors from clang (5.69 KB, patch)
2017-02-21 06:18 UTC, Rin Okuyama
no flags Details | Splinter Review

Description Rin Okuyama 2017-02-21 06:18:37 UTC
Created attachment 129786 [details] [review]
patch: avoid -Wformat errors from clang

Build with -DDEBUG option fails with clang due to -Wformat errors for
several libraries, namely, libXfont, libXt, libXkbui, and libXtrans.
I've tested that the patch works well both on ILP32 and LP64.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.