avoid -Wformat errors from clang when building with -DDEBUG

https://bugs.freedesktop.org/show_bug.cgi?id=99882

Reviewed-by: Alan Coopersmith <alan.coopersmith@oracle.com>
Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>